--- a/pixi.toml
+++ b/pixi.toml
@@ -28,6 +28,7 @@ shiny = ">=0.10.2,<0.11"
 datamodel-code-generator = ">=0.25.6,<0.26"
 tiktoken = ">=0.7.0,<0.8"
 openai = ">=1.31.0,<1.32"
+jsonref = ">=1.1.0,<1.2"
 
 [pypi-dependencies]
 fasttext = {git = "https://github.com/cfculhane/fastText.git#main"}
